# marketplace-back

./: .gitignore  .travis.yml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
app/: main.py
app/db/: db.py  db_service.py
app/models/: empresas.py  orders.py  owners.py  pedidos.py  productos.py  products.py  users.py  usuarios.py
app/routers/: empresas.py  pedidos.py  productos.py  products.py  usuarios.py
app/utils/: utils.py
test/routers/: test_products.py
