[tool.poetry]
name = "marketplace-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.15.0"
pytest = "^6.2.5"
requests = "^2.26.0"
httpx = { version = "^0.25.0", dependencies = ["urllib3==1.26.6"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"