[tool.poetry]
name = "marketplace-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.15.0"
requests = "^2.26.0"
httpx = "^0.25.0"
mangum = "0.17.0"
pydantic = "1.10.13"
boto3 = "1.28.62"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"